Add firebase functions.

--- a/firebase.json
+++ b/firebase.json
@@ -6,9 +6,11 @@
       "**/.*",
       "**/node_modules/**"
     ],
-    "rewrites": [ {
-     "source": "**",
-     "function": "app"
-   } ]
+    "rewrites": [
+      {
+        "source": "**",
+        "function": "app"
+      }
+    ]
   }
 }
